Option to load external csv extension/customisation files for: * conversions * PIDs * codelists fix #5